<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:layout_weight="5"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/main_title"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/btnInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:srcCompat="@android:drawable/ic_menu_info_details" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/txtDefault"
        android:textAlignment="center"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/spDefaultOpts"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:dropDownWidth="match_parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/txtManually"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etMac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:hint="@string/hintMac"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/txtHelp"
        android:textAlignment="center"
        android:textColor="@color/warning"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="12dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtAddressName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:layout_margin="12dp"
            android:textSize="14sp"
            android:inputType="textPersonName"
            android:hint="@string/hintMacName" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"

            android:text="@string/btnSave" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:text="@string/btnSend" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="16" />
</LinearLayout>